--- a/bookdown/25-regARIMA.Rmd
+++ b/bookdown/25-regARIMA.Rmd
@@ -2,7 +2,32 @@
 
 - Idea of regARIMA
 
+The most fundamental proceedure involved in X-13 is applying moving average filters.
+When symmetric filters are used we "lose" observations at the end of the series. Consider the simple moving average filter 
+$$ Y_t = \frac{1}{5} X_{t-2} + \frac{1}{5} X_{t-1} + \frac{1}{5} X_{t} + \frac{1}{5} X_{t+1} + \frac{1}{5} X_{t+2}. $$
+```{r}
+x <- window(AirPassengers, start = c(1959, 1), end = c(1960, 12))
+y = filter(x, filter = rep(1/5, 5), sides = 2)
+tsbox::ts_plot(cbind(x, y))
+```
+The output of the filter $Y_t$ is shorter than $X_t$ by 4 total observations.
+Two at the beginning and two at the end. 
+
+This is one of the primary reasons we consider regARIMA models when discussing seasonal adjustment; the observed time series is forecast extended to allow for symmetric moving average filters to be used all the way to the end of the series. 
+Another reason for regARIMA modeling is to include exogenous regression variables in our analysis.
+These include, but are not limited to, moving holiday effects, trading day, outliers and level-shifts. 
+The regARIMA take the form
+$$ f\left(\frac{Y_t}{D_t} \right) = \boldsymbol{\beta}^\prime {\bf X}_t + Z_t .$$
+Here $Y_t$ is the observed time series. 
+The function $f$ represents a transformation, most commonly used is the log transform ie $f(x) = \log(x)$.
+The regerssion variables appear in the columns of the design matrix ${\bf X}_t$ and $Z_t$ is an ARIMA process. 
+This last assumption on $Z_t$ is what distinguished a regARIMA model from more classic linear models and multiple linear regerssion where error terms are assumed uncorrelated.
+
+
 - How to use the regression spec
+
+- Table of all Regression effects available in X13 (steal from CR slides)
+
 
 - Case studies: Decide if you should include AO in May 2014.
 Construct a simple user defined regressor to handle specific issue.
