--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -3,23 +3,34 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2019},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
+
 @Manual{R-seasonal,
   title = {seasonal: R Interface to X-13-ARIMA-SEATS},
   author = {Christoph Sax},
-  year = {2018},
-  note = {R package version 1.7.0},
-  url = {https://CRAN.R-project.org/package=seasonal},
+  year = {2021},
+  note = {R package version 1.8.3},
+  url = {http://www.seasonal.website},
 }
+
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2021},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=usethis},
+}
+
 @Manual{R-x13binary,
-  title = {x13binary: Provide the 'x13ashtml' Seasonal Adjustment Binary},
+  title = {x13binary: Provide the x13ashtml Seasonal Adjustment Binary},
   author = {Dirk Eddelbuettel and Christoph Sax},
-  year = {2019},
-  note = {R package version 1.1.39-2},
-  url = {https://CRAN.R-project.org/package=x13binary},
+  year = {2021},
+  note = {R package version 1.1.57-1},
+  url = {https://github.com/x13org/x13binary},
 }
+
 @Article{seasonal2018,
   title = {Seasonal Adjustment by {X-13ARIMA-SEATS} in {R}},
   author = {Christoph Sax and Dirk Eddelbuettel},
@@ -30,3 +41,4 @@
   pages = {1--17},
   doi = {10.18637/jss.v087.i11},
 }
+
