--- a/bookdown/11-introduction.Rmd
+++ b/bookdown/11-introduction.Rmd
@@ -10,9 +10,73 @@
 
 - Case Study: A use cases outside of official statistics: seasonal adjustment of business data
 
-Start with a concrete example as quick as possible and use it to explain the basic idea of seasonal adjustment:
 
-    library(seasonal)
-    m <- seas(AirPassengers)
-    plot(m)
+Many time series exhibit a regular seasonal pattern over the year. US unemployment, for example, is usually higher from January to March, and again in June and July. Similarly, retail sales tend to peak with the Christmas season.
+
+To model the underlying structure of these series, any regular (seasonal) patterns are estimated and removed from the data. For example, to see if the economy is moving out of a recession during certain months, one wants the labor market data be free from such seasonal effects. Seasonal adjustment decomposes a time series into a trend, a seasonal and an irregular component and removes the seasonal component from the data.
+
+In official statistics, seasonal adjustment has a long tradition. The original X-11 software was developed by the US Census Bureau in the 1960s, and later improved by Statistics Canada (Dagum 1980). Subsequent software packages by the US Census Bureau were called X-12-ARIMA (Findley, Monsell, Bell, Otto, and Chen 1998) and X-13ARIMA-SEATS (or X-13, for short) (Monsell 2007). Today, X-11 is still used as a name for filter-based seasonal adjustment methods within X-13. Meanwhile, TRAMO-SEATS, developed by the Bank of Spain (Caporello, Maravall, and Sánchez 2001), offers an alternative model-based approach to seasonal adjustment.
+
+In its most recent version, X-13 offers these two seasonal adjustment methods in a single command-line tool, written in Fortran. The National Bank of Belgium has created an alter- native Java-based implementation called JDemetra+ (National Bank of Belgium, Deutsche Bundesbank, Eurostat 2017) which is also widely deployed by statistical agencies. One of either the TRAMO-SEATS or X-11 method of seasonal adjustment is used by almost all (government) statistical offices throughout the world.
+
+R (R Core Team 2017) offers several possibilities to perform seasonal adjustment in the stats package included with R. The decompose function uses filtering to split a time series into a trend, a seasonal and an irregular component. An alternative method is stl, which uses local regressions (and has some extensions offered by the stlplus package by Hafen (2016)). While both methods allow a multiplicative or an additive decomposition, these methods are somewhat limited in modeling actual data series.
+
+The programs used by statistical offices provide an extensive toolbox to deal with many advanced (and more irregular) aspects of seasonality, such as trading day adjustments, moving holiday adjustments or automated outlier detection.
+
+### Getting  Started
+
+If you use R installing X-13ARIMA-SEATS from CRAN is
+as easy as installing any other R package CITE JSS:
+
+```r
+install.packages("seasonal")
+```
+
+Once the package is installed it can be loaded in the usual way:
+
+```{r}
+library(seasonal)
+```
+
+The `seas` function provides the core functionality of the
+package. By default, `seas` calls the automatic procedures of
+X-13 to perform a seasonal adjustment that works well in most
+circumstances:
+
+```{r}
+seas(AirPassengers)
+```
+
+The first argument of seas is a time series of class "ts". The unemp example series measures US unemployment and is included in seasonal. The function returns an object of class "seas" that contains the necessary information on the adjustment performed on this time series.
+
+```{r}
+m <- seas(AirPassengers)
+```
+
+There are several functions and methods for "seas" objects. The final function returns the adjusted series. The plot method shows a plot with the unadjusted and the adjusted series.
+
+```{r}
+plot(m)
+```
+
+The summary method displays an overview of the model, very similar to the one produced by R’s lm function:
+
+
+```{r}
+summary(m)
+```
+
+
+### Example Series
+
+Throughout the book, we work with various example series. These sereis are included in seasonal and reflect various aspects of seseonal adjusmtent.
+
+Below is discussion of the series used in this book.
+
+#### US Unemployment
+
+```{r}
+plot(unemp)
+```
+
 
