--- a/bookdown/25-regARIMA.Rmd
+++ b/bookdown/25-regARIMA.Rmd
@@ -20,8 +20,37 @@ The regARIMA take the form
 $$ f\left(\frac{Y_t}{D_t} \right) = \boldsymbol{\beta}^\prime {\bf X}_t + Z_t .$$
 Here $Y_t$ is the observed time series. 
 The function $f$ represents a transformation, most commonly used is the log transform ie $f(x) = \log(x)$.
-The regerssion variables appear in the columns of the design matrix ${\bf X}_t$ and $Z_t$ is an ARIMA process. 
-This last assumption on $Z_t$ is what distinguished a regARIMA model from more classic linear models and multiple linear regerssion where error terms are assumed uncorrelated.
+The regression variables appear in the columns of the design matrix ${\bf X}_t$ and $Z_t$ is an ARIMA process. 
+This last assumption on $Z_t$ is what distinguished a regARIMA model from more classic linear models and multiple linear regression where error terms are assumed uncorrelated.
+In order to achieve a suitable seasonal adjustment it is important to get the regARIMA model correct.
+For most dataset the built in automatic modeling features of the X13 program will be suitable to detect a reasonable model. 
+This can be used as a starting point for more rigorous regARIMA model development or used as the final regARIMA modeling choice for your seasonal adjustment needs.
+We evoke automatic model identification through the XXX spec. 
+The default behavior of the R seasonal package is XXX which includes automatic model identification. 
+As an aside, the general rule is to not use automatic modeling ``in production''.
+This mean, if you are going to include seasonal adjustment as part of a large scale data processing that occurs regularly (say monthly), then it is not advisable to have automatic model identification run every month. 
+Instead, an alternative process, is to run automodel once and then fix the model choice in the XXX spec file. 
+This does not need to be done manually since the `static()` function from the seasonal package can do this for you. 
+For example, consider the default seasonal adjustment 
+```{r}
+m <- seasonal::seas(AirPassengers, x11 = "")
+print(m$spc$automdl)
+print(m$spc$arima)
+```
+Notice the value `NULL` indicates no ARIMA model is specified and the returned arguments for the automdl spec indicate it is active during the X13 run. 
+
+```{r}
+seasonal::udg(m, "automdl")
+```
+
+Indicates that automatic modeling identified the (0 1 1)(0 1 1) model as the best choice. 
+If we want to hardcode this model for subsequent runs, and turn off automatic model identification, this can be done via
+
+```{r}
+m_call <- seasonal::static(m)
+m2 <- seasonal::eval(m_call)
+```
+
 
 
 - How to use the regression spec
