--- a/README.Rmd
+++ b/README.Rmd
@@ -20,3 +20,10 @@ An R package that supplements "Seasonal Adjustment in R", an online Book by Jame
 
 This is an early draft.
 
+To preview the quarto book, run:
+
+```sh
+quarto preview quarto
+```
+
+It watches for changes and live-previews in the browser.
