--- a/quarto/23-seats.qmd
+++ b/quarto/23-seats.qmd
@@ -1,5 +1,12 @@
 ## SEATS
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 - How to use the SEATS spec
 
 - SEATS vs X11
