--- a/quarto/43-indirect-vs-direct.qmd
+++ b/quarto/43-indirect-vs-direct.qmd
@@ -1,3 +1,9 @@
 ## Indirect vs direct adjustment
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
 - Should the subcomponents of a series be adjusted separately?
