--- a/quarto/50-quality-assessment.qmd
+++ b/quarto/50-quality-assessment.qmd
@@ -1,5 +1,12 @@
 # Quality assessment
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 This section focuses on diagnostic tools for seasonal adjustment.
 This will be written as a stand-alone section as well as a continuance of prior sections.
 The idea here is that many readers may be interested in checking the quality of their adjustments but not need help performing it.
