--- a/quarto/51-quality-measures.qmd
+++ b/quarto/51-quality-measures.qmd
@@ -1,5 +1,12 @@
 ## Quality measures
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 - What is a good seasonal adjustment?
 
 - M statistics
