--- a/quarto/10-basics.qmd
+++ b/quarto/10-basics.qmd
@@ -1,5 +1,13 @@
 # Getting Started
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
+
 This section focuses on explaining the basics of seasonal adjustment and gets the reader involved with a minimal working example.
 It keeps the technical jargon to a minimum.
 Finally, the layout of the book and future sections is clearly spelled out.
