--- a/quarto/12-how-to-use.qmd
+++ b/quarto/12-how-to-use.qmd
@@ -1,5 +1,12 @@
 ## How to use the book
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 - Overview of the book
 
 - The Book wants to give concrete advise in case of a problem.
@@ -7,3 +14,13 @@
 - Ideally we want to have a quick check list that gives readers a starting point where to look for further advice. That could be something like a Cheat Sheet (https://www.rstudio.com/resources/cheatsheets/) with quick advise and chapter references.
 
 - For each section, we want to provide a concrete and informative case study. Some examples are provided in the outline.
+
+```{mermaid}
+flowchart LR
+  A[Hard edge] --> B(Round edge)
+  B --> C{Decision}
+  C --> D[Result one]
+  C --> E[Result two]
+```
+
+
