--- a/quarto/33-outliers.qmd
+++ b/quarto/33-outliers.qmd
@@ -1,5 +1,12 @@
 ## Outliers
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 - Why care about outliers?
 
 - Additive outliers, level shifts, temporary changes
