--- a/quarto/40-other-issues.qmd
+++ b/quarto/40-other-issues.qmd
@@ -1,5 +1,12 @@
 # Other Issues
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 Part IV investigates more holistic issues that practitioners face.
 The main focus is to give classical methodology to answer their problems.
 Since these types of issues can be highly specialized, we concentrate on known solutions to the topics.
