--- a/quarto/60-future.qmd
+++ b/quarto/60-future.qmd
@@ -1,5 +1,12 @@
 # The future of seasonal adjustment
 
+```{r}
+#| results: "asis"
+#| echo: false
+source("_common.R")
+status("drafting")  # drafting, polishing, complete
+```
+
 This short section outlines the future projects in the seasonal adjustment field.
 Daily or multiple seasonal adjustment plays a major role here.
 Ideally, examples of how to solve these problems are given.
